fixed a couple of viewing non-idealities on mobile devices

--- a/stylesheets/about.css
+++ b/stylesheets/about.css
@@ -11,3 +11,15 @@ main p {
 main div {
     width: 40vw;
 }
+
+@media (max-aspect-ratio: 1/1) {
+    main p {
+        width: 80vw;
+        margin: 5px;
+    }
+    
+    main div {
+        width: 80vw;
+        margin-top: 20px;
+    }
+  }
