--- a/stylesheets/dashboard.css
+++ b/stylesheets/dashboard.css
@@ -32,4 +32,5 @@
     background: white;
     border-radius: 8px;
     border: solid black;
+    word-break: break-word;
 }
